@@ -1,11 +1,9 @@
 {
-  "timestamp" : "2022-05-07T00:42:28Z",
-  "count" : 17,
-  "count_minmax" : [ 16, 17 ],
-  "count_prev_day_inc" : 16,
-  "count_prev_day_dec" : 0,
+  "timestamp" : "2022-05-20T08:12:26Z",
+  "count" : 1,
+  "count_minmax" : [ 1, 17 ],
+  "count_decinc" : [ -16, +0 ],
   "uniques" : 1,
   "uniques_minmax" : [ 1, 1 ],
-  "uniques_prev_day_inc" : 1,
-  "uniques_prev_day_dec" : 0
+  "uniques_decinc" : [ -0, +0 ]
 }
