@@ -1,10 +1,10 @@
 {
-  "count": 276,
+  "count": 260,
   "uniques": 1,
   "views": [
     {
       "timestamp": "2022-05-06T00:00:00Z",
-      "count": 17,
+      "count": 1,
       "uniques": 1
     },
     {
